<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Oleg37.
  ~
  ~ Licensed under the GNU General Public License v3.0
  ~
  ~ https://www.gnu.org/licenses/gpl-3.0.html
  ~
  ~ Permissions of this strong copyleft license are conditioned on making available complete source
  ~ code of licensed works and modifications, which include larger works using a licensed work,
  ~ under the same license. Copyright and license notices must be preserved. Contributors provide
  ~ an express grant of patent rights.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/importar_amigos"
        android:icon="@drawable/importar"
        android:title="@string/importar" />

    <item
        android:id="@+id/inicio_amigos"
        android:icon="@drawable/home"
        android:title="@string/inicio" />
    <item
        android:id="@+id/listar_amigos"
        android:icon="@drawable/listar"
        android:title="@string/listar" />

</menu>