<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Oleg37.
  ~
  ~ Licensed under the GNU General Public License v3.0
  ~
  ~ https://www.gnu.org/licenses/gpl-3.0.html
  ~
  ~ Permissions of this strong copyleft license are conditioned on making available complete source
  ~ code of licensed works and modifications, which include larger works using a licensed work,
  ~ under the same license. Copyright and license notices must be preserved. Contributors provide
  ~ an express grant of patent rights.
  -->

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/inicio_fragment_scene"
    tools:context=".view.fragments.Inicio">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pantalla_de_inicio"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cien"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cien"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scrollbarFadeDuration="800"
        android:src="@drawable/titulo1"
        app:layout_constraintEnd_toEndOf="@+id/text_home"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scrollbarFadeDuration="800"
        android:src="@drawable/titulo1"
        app:layout_constraintEnd_toEndOf="@+id/text_home"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />
</androidx.constraintlayout.motion.widget.MotionLayout>